--- a/templates/login.html
+++ b/templates/login.html
@@ -16,12 +16,14 @@
     </div>
       </nav>
       <div class="container">
-          <div class="card2" style=" margin-top: 175px;">
+          <div class="row">
+          <div class="card2 col-md-6" style=" margin-top: 175px; background-color: #6a5862;">
             <form action = "" method = "post">
                 <p class="btn"><input type = text name = username></p>
                 <p class="btn"><input type = submit value = Login></p>
              </form>
           </div>
+        </div>
       </div>
 </body>
 </html>
