--- a/templates/splash.html
+++ b/templates/splash.html
@@ -17,10 +17,12 @@
       </nav>
 
       <div class="container">
-          <div class="card" style="margin-top: 100px;">
+          <div class="row">
+          <div class="card1 col-md-6" style="margin-top: 100px; background-color: #6a5862;">
             <h1 style="text-align:center; margin-bottom: 25px;margin-top: 5px">HI! 👋🏼</h1>
               <h5 style="text-align:center; margin-bottom: 75px; margin-top: 10px;">Please <a href='/login'>login </a> to see the menu</h5>
           </div>
+        </div>
       </div>
 </body>
 </html>
