--- a/templates/splash.html
+++ b/templates/splash.html
@@ -19,8 +19,8 @@
       <div class="container">
           <div class="row">
           <div class="card1 col-md-6" style="margin-top: 100px; background-color: #6a5862;">
-            <h1 style="text-align:center; margin-bottom: 25px;margin-top: 5px">HI! 👋🏼</h1>
-              <h5 style="text-align:center; margin-bottom: 75px; margin-top: 10px;">Please <a href='/login'>login </a> to see the menu</h5>
+            <h1 style="text-align:center; margin-bottom: 25px;margin-top: 5px">Hi! 👋🏼</h1>
+              <h5 style="text-align:center; margin-bottom: 75px; margin-top: 10px;">Please <a href='/login'>login</a> to see the menu</h5>
           </div>
         </div>
       </div>
